2006-03-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/index.html: remove old notes.
	
	* scripts/format-page.py (branches): add 2.8, 2.9

	* site/install/older-versions.html: remove 2.0 and earlier.

	* site/switch/advantages.html: change order of advantages.

	* site/devel/packaging.html (href): replace with link to GUB.

	* site/about/faq.html (href): trim extending question. 

	* site/install/getting-started.html: update for mingw. remove
	cygwin reference. 

	* site/install/menu-entries.py: remove cygwin link.
	remove fink link.

	* site/about/thanks.html: name Mats as support guru.

	* site/switch/advantages.html: link to sponsor page.

	* site/switch/testimonials.html (href): shorten WL quote

2006-03-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/announce-v2.8.html: add Mats B.

	* site/announce-v2.8.html: new file.

2006-03-08  John Mandereau  <john.mandereau@free.fr>

	* fr/switch/new-notation.html: revise translation
	* fr/sponsor/options.html: update translation

2006-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: use darwin-ppc for dl link.

2006-03-05  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/switch/new-notation.html: *really* add the page

2006-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: mention that MosX is PPC.

2006-02-22  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* site/switch/new-notation.html:
	    - add translation header
	    - change 'tour.html' link to 'tour' (for translation)

	* fr/switch/new-notation.html: new translated page

	* fr/sponsor/options.html: update

2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* fr/index.html: for fr and nl too.

	* site/index.html: oops. new @@ strings 

2006-02-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: use new @@ strings.

	* scripts/lilypondorg.py: sync with GUB.

	* scripts/format-page.py (branches): support for branches, i.e. @v2.7-mingw-VERSION@
