@@ -10,22 +10,19 @@
 <h2>On-line documentation</h2>
 
 <ul>
-
-  <li>
+    <li>
     Documentation for
-    <a href="@DOC@v2.6/Documentation/">
-      <b><font size="+1">
-	  LilyPond 2.6</font></b>
+    <a href="@DOC@v2.8/Documentation/">
+              <b><font size="+1">
+	  LilyPond 2.8</font></b>
     </a>
     (latest stable)
   </li>
-    <li>
+  <li>
     Documentation for
-    <a href="@DOC@v2.7/Documentation/">
-              <b>
-	  LilyPond 2.7</b>
+    <a href="@DOC@v2.6/Documentation/">
+      <b>LilyPond 2.6</b>
     </a>
-    (development)
   </li>
   <li>
     Documentation for
