@@ -47,7 +47,7 @@
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.6/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
+  <a href="@DOC@v2.8/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
      title="Click for a PDF file">
     <img src="@IMAGES@sarabande.png" alt="sarabande">
   </a>
@@ -61,7 +61,7 @@
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.6/input/les-nereides.pdf"
+  <a href="@DOC@v2.8/input/les-nereides.pdf"
      title="Click for a PDF file">
     <img src="@IMAGES@les-nereides.png" alt="les-nereides"></a>
 </p>
@@ -72,7 +72,7 @@
 <p>
   More samples of the latest LilyPond versions are included in the
   documentation pages.  There are separate pages for the
-  <a href="@DOC@v2.6/examples.html">stable</a> and for the
+  <a href="@DOC@v2.8/examples.html">stable</a> and for the
   <a href="@DOC@v2.7/examples.html">development</a> release.
 </p>
 
